Fix contrast errors

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 1.8rem;
-  font-weight: 400;
+  font-weight: 500;
   color: white;
   text-align: center;
 }
